# public/api.yaml
@@ -2081,4 +2081,63 @@ paths:
                           type: number
                           default: 1
                           description: The quantity of the product.
-      
+  /carts/delete-cart/{cart_id}/{product_id}:
+    delete:
+      summary: Delete a product from a cart
+      description: Removes a specific product from the cart.
+      tags:
+        - carts
+      parameters:
+        - in: path
+          name: cart_id
+          schema:
+            type: string
+            format: objectid
+          required: true
+          description: The ID of the cart to update.
+        - in: path
+          name: product_id
+          schema:
+            type: string
+            format: objectid
+          required: true
+          description: The ID of the product to remove.
+      responses:
+        '200':
+          description: Product removed from cart successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  message:
+                    type: string
+                  data:
+                    type: object
+                    properties:
+                      _id:
+                        type: string
+                        format: objectid
+                      user_id:
+                        type: string
+                        format: objectid
+                      items:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            product_id:
+                              type: string
+                              format: objectid
+                            quantity:
+                              type: number
+                      isActive:
+                        type: boolean
+                      createdAt:
+                        type: string
+                        format: date-time
+                      updatedAt:
+                        type: string
+                        format: date-time
